# bmf

./: README.md  pyproject.toml
src/bmf/: __init__.py  __main__.py  baselines.py  model.py  timer.py
tests/: test_baselines.py  test_model.py
