[project]
name = "bmf"
version = "0.1.0"
description = "Bayesian Matrix Factorization on MovieLens using PyMC"
authors = [
    { name = "Jean Simatic", email = "jean@simatic.org" }
]
dependencies = [
    "pymc",
    "blackjax",
    "datasets",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest"
]

[tool.hatch.metadata]
allow-direct-references = true
